--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.1.0-canary-662957cc-20250221",
     "react-dom": "^19.1.0-canary-662957cc-20250221",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
