--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@octokit/rest": "latest",
     "@radix-ui/react-slot": "^1.1.2",
+    "@upstash/redis": "^1.34.4",
     "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
